<resources>
    <string name="app_name">Hong Pak</string>
    <string name="login_btn">Login / Register</string>
    <string name="shutdown_btn">Exit App</string>
    <string name="label_created_by">Created by</string>
    <string name="label_author">332 Maythawat  Mahawan</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="label_create_account">Don\'t have account?</string>
    <string name="label_login">Login</string>
    <string name="label_link_create_account">create one</string>
    <string name="label_register">Register</string>
    <string name="label_account_exist">Have an account?</string>
</resources>